# clojurust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  VERSIONING.md  async-plan.md  async-worker-pool-plan.md  epl-v10.html  hello  hello_bin  index.html  networking-plan.md  next.txt  reduce_test.cljrs  reduce_test.cljrs.save  release.toml  test_harness  test_harness2  test_harness4
.cljrs-aot-test-harness/: Cargo.toml  build.rs
.cljrs-aot-test-harness/src/: bundled_128.cljrs  bundled_162.cljrs  bundled_187.cljrs  bundled_188.cljrs  bundled_189.cljrs  bundled_200.cljrs  bundled_203.cljrs  bundled_207.cljrs  bundled_48.cljrs  bundled_57.cljrs  bundled_59.cljrs  bundled_89.cljrs  main.rs
crates/cljrs-async/: Cargo.toml  README.md
crates/cljrs-async/src/: builtins.rs  channel.rs  core_async.cljrs  eval_async.rs  isolate.rs  isolate_channel.rs  lib.rs  runtime.rs  state_machine.rs
crates/cljrs-async/tests/: async_fn.rs  compiled_dispatch.rs  error_propagation.rs  worker_pool.rs
crates/cljrs-base64/: Cargo.toml  README.md  cljrs.edn
crates/cljrs-base64/src/: lib.rs
crates/cljrs-base64/tests/: clojure_tests.rs
crates/cljrs-blake3/: Cargo.toml  README.md  cljrs.edn
crates/cljrs-blake3/src/: lib.rs
crates/cljrs-blake3/tests/: clojure_tests.rs
crates/cljrs-builtins/: Cargo.toml  README.md
crates/cljrs-builtins/src/: array_list.rs  bitops.rs  bootstrap.cljrs  builtins.rs  clojure_test.cljrs  form.rs  lib.rs  new.rs  regex.rs  special.rs  taps.rs  time.rs  transients.rs  util.rs
crates/cljrs-charset/: Cargo.toml  README.md
crates/cljrs-charset/src/: codec.rs  codec_chan.rs  fns.rs  lib.rs
crates/cljrs-compiler/: Cargo.toml  README.md
crates/cljrs-compiler/src/: anf.rs  aot.rs  codegen.rs  escape.rs  ir.rs  ir_convert.rs  lib.rs  rt_abi.rs  typeinfer.rs
crates/cljrs-compiler/tests/: aot_e2e.rs  interned_scalars.rs  wasm_compile.rs
crates/cljrs-deps/: Cargo.toml  README.md
crates/cljrs-deps/src/: lib.rs  parse.rs
crates/cljrs-dom/: Cargo.toml  README.md
crates/cljrs-dom/src/: events.rs  fns.rs  lib.rs  node.rs
crates/cljrs-dylib/: Cargo.toml  README.md  build.rs
crates/cljrs-dylib/src/: lib.rs
crates/cljrs-dylib/tests/: pinned_dylib_e2e.rs
crates/cljrs-env/: Cargo.toml  README.md
crates/cljrs-env/src/: apply.rs  async_hook.rs  callback.rs  env.rs  error.rs  gc_roots.rs  lib.rs  loader.rs  taps.rs  versioned.rs
crates/cljrs-eval/: Cargo.toml  README.md
crates/cljrs-eval/src/: apply.rs  array_list.rs  bitops.rs  bootstrap.cljrs  builtins.rs  callback.rs  clojure_test.cljrs  defn_registry.rs  destructure.rs  env.rs  eval.rs  ir_cache.rs  ir_convert.rs  ir_interp.rs  jit_state.rs  lib.rs  loader.rs  lower.rs  lower_worker.rs  macros.rs  new.rs  regex.rs  special.rs  syntax_quote.rs  taps.rs  transients.rs  util.rs  virtualize.rs
crates/cljrs-eval/tests/: destructure_lowering.rs  osr_transfer.rs  partition_ir.rs  region_phi_uaf.rs  versioned_ir.rs
crates/cljrs-export-macro/: Cargo.toml  README.md
crates/cljrs-export-macro/src/: lib.rs
crates/cljrs-gc/: Cargo.toml  README.md
crates/cljrs-gc/src/: alloc_ctx.rs  cancellation.rs  config.rs  lib.rs  region.rs  static_arena.rs  stats.rs
crates/cljrs-gc/tests/: no_gc_alloc.rs
crates/cljrs-interop/: Cargo.toml  README.md
crates/cljrs-interop/src/: error.rs  exports.rs  lib.rs  marshal.rs  register.rs  registry.rs
crates/cljrs-interp/: Cargo.toml  README.md
crates/cljrs-interp/src/: apply.rs  arity.rs  destructure.rs  eval.rs  lib.rs  macros.rs  special.rs  syntax_quote.rs  versioned.rs  virtualize.rs
crates/cljrs-interp/tests/: auto_gensym.rs  auto_keyword_macro.rs  declare_macro.rs  into_seq_target.rs  named_fn_identity.rs  no_gc_eval.rs  ns_metadata.rs  partition_arities.rs  shared_atom.rs  threading_macros.rs  versioned_resolution.rs
crates/cljrs-io/: Cargo.toml  README.md
crates/cljrs-io/src/: charset.rs  clojure_rust_io_async.cljrs  fs.rs  lib.rs
crates/cljrs-io/tests/: io_async.rs
crates/cljrs-ir/: Cargo.toml  ESCAPE_OPT_PLAN.md  README.md
crates/cljrs-ir-prebuild/: Cargo.toml
crates/cljrs-ir-prebuild/src/: main.rs
crates/cljrs-ir-viz/: Cargo.toml  README.md
crates/cljrs-ir-viz/examples/: dump.rs  dump_escape.rs
crates/cljrs-ir-viz/src/: blame.rs  lib.rs  region.rs  render.rs
crates/cljrs-ir-viz/tests/: smoke.rs
crates/cljrs-ir/src/: lib.rs  osr.rs
crates/cljrs-ir/tests/: capture_minimization.rs  clojure_tests.rs  escape_regression.rs  numeric_literals.rs
crates/cljrs-jit/: Cargo.toml  README.md
crates/cljrs-jit/src/: async_jit.rs  code_cache.rs  jit_compiler.rs  jit_worker.rs  lib.rs  osr_integration.rs
crates/cljrs-jit/tests/: async_activation.rs  partition_jit.rs  versioned_jit.rs
crates/cljrs-lsp/: Cargo.toml  README.md
crates/cljrs-lsp/src/: analysis.rs  backend.rs  diagnostics.rs  document.rs  lib.rs  line_index.rs  main.rs  recovery.rs  symbols.rs
crates/cljrs-lsp/tests/: smoke.rs
crates/cljrs-net/: Cargo.toml  README.md
crates/cljrs-net/src/: clojure_rust_net.cljrs  clojure_rust_net_frame.cljrs  clojure_rust_net_h2.cljrs  clojure_rust_net_h3.cljrs  clojure_rust_net_http2.cljrs  clojure_rust_net_quic.cljrs  clojure_rust_net_tcp.cljrs  clojure_rust_net_tls.cljrs  clojure_rust_net_udp.cljrs  clojure_rust_net_unix.cljrs  frame.rs  h2.rs  h3.rs  lib.rs  pool_io.rs  quic.rs  quic_config.rs  tcp.rs  tls.rs  udp.rs  unix.rs
crates/cljrs-net/tests/: framing.rs  h3.rs  http2.rs  lifecycle.rs  quic.rs  tcp_client.rs  tcp_server.rs  tls.rs  udp.rs  unix.rs
crates/cljrs-nrepl/: Cargo.toml  README.md
crates/cljrs-nrepl/src/: bencode.rs  engine.rs  lib.rs  protocol.rs  server.rs
crates/cljrs-nrepl/tests/: nrepl_server.rs
crates/cljrs-runtime/: Cargo.toml  README.md
crates/cljrs-stdlib/: Cargo.toml  README.md  build.rs
crates/cljrs-stdlib/src/: core_async.rs  edn.rs  io.rs  lib.rs  set.rs  string.rs
crates/cljrs-stdlib/tests/: compiler_clojure_tests.rs
crates/cljrs-types/: Cargo.toml  README.md
crates/cljrs-types/src/: error.rs  (+1 more)
crates/cljrs-value/: Cargo.toml  README.md
crates/cljrs-vcs/: Cargo.toml  README.md
(+279 files in other folders)
