[workspace]
members = [
    "crates/cljrs-types",
    "crates/cljrs-gc",
    "crates/cljrs-value",
    "crates/cljrs-reader",
    "crates/cljrs-eval",
    "crates/cljrs-stdlib",
    "crates/cljrs-runtime",
    "crates/cljrs-ir",
    "crates/cljrs-compiler",
    "crates/cljrs-interop",
    "crates/cljrs-logging",
    "crates/cljrs",
    "examples/rust-interop",
    "crates/cljrs-env",
    "crates/cljrs-builtins",
    "crates/cljrs-interp",
    "crates/cljrs-ir-prebuild",
    "crates/cljrs-ir-viz",
    "crates/cljrs-deps",
    "crates/cljrs-vcs"]
resolver = "2"

[workspace.package]
license = "EPL-1.0"
repository = "https://github.com/csm/clojurust"

[workspace.dependencies]
cljrs-types    = { path = "crates/cljrs-types",    version = "0.1.0" }
cljrs-gc       = { path = "crates/cljrs-gc",       version = "0.1.0" }
cljrs-value    = { path = "crates/cljrs-value",    version = "0.1.0" }
cljrs-reader   = { path = "crates/cljrs-reader",   version = "0.1.0" }
cljrs-eval     = { path = "crates/cljrs-eval",     version = "0.1.0" }
cljrs-stdlib   = { path = "crates/cljrs-stdlib",   version = "0.1.0" }
cljrs-runtime  = { path = "crates/cljrs-runtime",  version = "0.1.0" }
cljrs-ir       = { path = "crates/cljrs-ir",       version = "0.1.0" }
cljrs-compiler = { path = "crates/cljrs-compiler", version = "0.1.0" }
cljrs-interop  = { path = "crates/cljrs-interop",  version = "0.1.0" }
cljrs-logging  = { path = "crates/cljrs-logging",  version = "0.1.0" }
cljrs-env      = { path = "crates/cljrs-env",      version = "0.1.0" }
cljrs-builtins = { path = "crates/cljrs-builtins", version = "0.1.0" }
cljrs-interp   = { path = "crates/cljrs-interp",   version = "0.1.0" }
cljrs-ir-prebuild = { path = "crates/cljrs-ir-prebuild", version = "0.1.0" }
cljrs-ir-viz  = { path = "crates/cljrs-ir-viz",  version = "0.1.0" }
cljrs-deps    = { path = "crates/cljrs-deps",    version = "0.1.0" }
cljrs-vcs     = { path = "crates/cljrs-vcs",     version = "0.1.0" }

miette       = { version = "7", features = ["fancy"] }
thiserror    = "2"
clap         = { version = "4", features = ["derive"] }
num-bigint   = "0.4"
num-rational = "0.4"
num-traits   = "0.2"
bigdecimal   = "0.4"
rand         = "0.10.1"
rpds         = "1"
uuid         = "1.22.0"
tokio        = "1.50.0"
regex        = "1.12.3"
serde        = "1.0.228"
postcard     = "1.1.3"
rustyline    = "18.0.0"
libloading   = "0.8"

# Cranelift compiler backend (all crates must be at the same version)
cranelift-codegen  = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-module   = "0.129.1"
cranelift-object   = "0.129.1"
cranelift-native   = "0.129.1"
target-lexicon     = "0.13"
