[workspace]
members = [
    "crates/cljrs-types",
    "crates/cljrs-gc",
    "crates/cljrs-value",
    "crates/cljrs-reader",
    "crates/cljrs-eval",
    "crates/cljrs-stdlib",
    "crates/cljrs-runtime",
    "crates/cljrs-ir",
    "crates/cljrs-compiler",
    "crates/cljrs-interop",
    "crates/cljrs-export-macro",
    "crates/cljrs-logging",
    "crates/cljrs",
    "examples/rust-interop",
    "crates/cljrs-env",
    "crates/cljrs-builtins",
    "crates/cljrs-interp",
    "crates/cljrs-ir-prebuild",
    "crates/cljrs-ir-viz",
    "crates/cljrs-deps",
    "crates/cljrs-vcs",
    "crates/cljrs-blake3",
    "crates/cljrs-wasm",
    "crates/cljrs-async",
    "crates/cljrs-io",
    "crates/cljrs-net",
    "crates/cljrs-charset",
    "crates/cljrs-lsp",
    "crates/cljrs-nrepl",
    "crates/cljrs-base64",
    "crates/cljrs-jit",
    "crates/cljrs-dylib"]
resolver = "2"

[workspace.package]
license = "EPL-1.0"
repository = "https://github.com/csm/clojurust"

[workspace.dependencies]
cljrs-types        = { path = "crates/cljrs-types",        version = "0.1.163" }
cljrs-gc           = { path = "crates/cljrs-gc",           version = "0.1.163" }
cljrs-value        = { path = "crates/cljrs-value",        version = "0.1.163" }
cljrs-reader       = { path = "crates/cljrs-reader",       version = "0.1.163" }
cljrs-eval         = { path = "crates/cljrs-eval",         version = "0.1.163" }
cljrs-stdlib       = { path = "crates/cljrs-stdlib",       version = "0.1.163" }
cljrs-runtime      = { path = "crates/cljrs-runtime",      version = "0.1.163" }
cljrs-ir           = { path = "crates/cljrs-ir",           version = "0.1.163" }
cljrs-compiler     = { path = "crates/cljrs-compiler",     version = "0.1.163" }
cljrs-interop      = { path = "crates/cljrs-interop",      version = "0.1.163" }
cljrs-export-macro = { path = "crates/cljrs-export-macro", version = "0.1.163" }
cljrs-logging      = { path = "crates/cljrs-logging",      version = "0.1.163" }
cljrs-env          = { path = "crates/cljrs-env",          version = "0.1.163" }
cljrs-builtins     = { path = "crates/cljrs-builtins",     version = "0.1.163" }
cljrs-interp       = { path = "crates/cljrs-interp",       version = "0.1.163" }
cljrs-ir-prebuild  = { path = "crates/cljrs-ir-prebuild",  version = "0.1.163" }
cljrs-ir-viz       = { path = "crates/cljrs-ir-viz",       version = "0.1.163" }
cljrs-deps         = { path = "crates/cljrs-deps",         version = "0.1.163" }
cljrs-vcs          = { path = "crates/cljrs-vcs",          version = "0.1.163" }
cljrs-async        = { path = "crates/cljrs-async",        version = "0.1.163" }
cljrs-io           = { path = "crates/cljrs-io",           version = "0.1.163" }
cljrs-net          = { path = "crates/cljrs-net",          version = "0.1.163" }
cljrs-charset      = { path = "crates/cljrs-charset",      version = "0.1.163" }
cljrs-lsp          = { path = "crates/cljrs-lsp",          version = "0.1.163" }
cljrs-nrepl        = { path = "crates/cljrs-nrepl",        version = "0.1.163" }
cljrs-jit          = { path = "crates/cljrs-jit",          version = "0.1.163" }
cljrs-dylib        = { path = "crates/cljrs-dylib",        version = "0.1.163" }

miette       = { version = "7", features = ["fancy"] }
thiserror    = "2"
inventory    = "0.3"
clap         = { version = "4", features = ["derive"] }
num-bigint   = "0.4"
num-rational = "0.4"
num-traits   = "0.2"
bigdecimal   = "0.4"
rand         = "0.10.1"
rpds         = "1"
uuid         = "1.22.0"
tokio        = { version = "1.50.0", features = ["rt", "sync", "time", "macros"] }
futures-util = "0.3"
encoding_rs  = "0.8"
regex        = "1.12.3"
serde        = "1.0.228"
postcard     = "1.1.3"
rustyline    = "18.0.0"
libloading   = "0.8"
arc-swap     = "1"
quinn        = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
h3           = "0.0.8"
h3-quinn     = "0.0.10"
tower-lsp     = "0.20"
dashmap       = "6"

# Pure-Rust git (gitoxide) + native commit-signature verification
gix      = { version = "0.84", default-features = false, features = [
    "sha1",
    "max-performance-safe",
    "blocking-http-transport-reqwest-rust-tls",
    "revision",
    "worktree-mutation",
] }
pgp      = "0.19"
ssh-key  = { version = "0.6", default-features = false, features = [
    "alloc",
    "ed25519",
    "p256",
    "rsa",
] }
# Native (pure-Rust) SSH transport for ssh:// git remotes (opt-in via the
# `ssh` feature of cljrs-vcs).
russh      = "0.61"
tokio-util = { version = "0.7", features = ["io", "io-util"] }

# Cranelift compiler backend (all crates must be at the same version)
cranelift-codegen  = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-module   = "0.129.1"
cranelift-object   = "0.129.1"
cranelift-jit      = "0.129.1"
cranelift-native   = "0.129.1"
target-lexicon     = "0.13"
