[package]
name = "cljrs-aot-harness"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
cljrs-types    = { path = "/Users/csm/src/clojurust/crates/cljrs-types" }
cljrs-gc       = { path = "/Users/csm/src/clojurust/crates/cljrs-gc" }
cljrs-value    = { path = "/Users/csm/src/clojurust/crates/cljrs-value" }
cljrs-reader   = { path = "/Users/csm/src/clojurust/crates/cljrs-reader" }
cljrs-eval     = { path = "/Users/csm/src/clojurust/crates/cljrs-eval" }
cljrs-stdlib   = { path = "/Users/csm/src/clojurust/crates/cljrs-stdlib" }
cljrs-compiler = { path = "/Users/csm/src/clojurust/crates/cljrs-compiler" }
