[package]
name = "cljrs-blake3"
version = "0.1.92"
edition = "2024"
description = "BLAKE3 cryptographic hash functions exposed as Clojure native functions"
license.workspace = true
repository.workspace = true

[lib]
# `cdylib` produces the `.so`/`.dylib`/`.dll` loaded dynamically by
# `cljrs run` / `cljrs repl` after `cljrs build-native`.
# `rlib` keeps the crate usable as a normal Rust workspace member —
# integration tests and AOT static linking both depend on it.
crate-type = ["cdylib", "rlib"]

[dependencies]
cljrs-interop = { workspace = true }
cljrs-gc      = { workspace = true }
cljrs-value   = { workspace = true }
blake3        = "1"

[dev-dependencies]
cljrs-eval    = { workspace = true }
cljrs-stdlib  = { workspace = true }
cljrs-env     = { workspace = true }
cljrs-gc      = { workspace = true }
cljrs-interop = { workspace = true }
cljrs-reader  = { workspace = true }
