[package]
name = "cljrs-compiler"
version = "0.1.0"
edition = "2024"
description = "JIT (Cranelift) and AOT compiler backend for clojurust"
license.workspace = true
repository.workspace = true

[features]
aot_full_test = []

[dependencies]
cljrs-types  = { workspace = true }
cljrs-ir     = { workspace = true }
cljrs-gc     = { workspace = true }
cljrs-value  = { workspace = true }
cljrs-reader = { workspace = true }
cljrs-eval   = { workspace = true }
cljrs-stdlib = { workspace = true }

cranelift-codegen  = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module   = { workspace = true }
cranelift-object   = { workspace = true }
cranelift-native   = { workspace = true }
target-lexicon     = { workspace = true }
