[package]
name = "cljrs-deps"
version = "0.1.131"
edition = "2024"
description = "cljrs.edn project configuration parser and dependency model"
license.workspace = true
repository.workspace = true

[dependencies]
cljrs-types  = { workspace = true }
cljrs-gc     = { workspace = true }
cljrs-reader = { workspace = true }
thiserror    = { workspace = true }
