[package]
name = "cljrs-eval"
version = "0.1.0"
edition = "2024"
description = "Tree-walking interpreter and macro expander for clojurust"

[dependencies]
cljrs-types   = { workspace = true }
cljrs-gc      = { workspace = true }
cljrs-reader  = { workspace = true }
cljrs-value   = { workspace = true }
thiserror    = { workspace = true }
num-bigint   = { workspace = true }
num-rational = { workspace = true }
num-traits   = { workspace = true }
bigdecimal   = { workspace = true }
rand         = { workspace = true }
rpds         = { workspace = true }
uuid         = { workspace = true, features = ["v4"] }