[package]
name = "cljrs-eval"
version = "0.1.0"
edition = "2024"
description = "IR-accelerated evaluation for clojurust (tier-1 IR interpreter + lowering)"
license.workspace = true
repository.workspace = true

[features]
no-gc = ["cljrs-gc/no-gc", "cljrs-value/no-gc", "cljrs-env/no-gc", "cljrs-builtins/no-gc", "cljrs-interp/no-gc"]

[dependencies]
cljrs-types    = { workspace = true }
cljrs-ir       = { workspace = true }
cljrs-gc       = { workspace = true }
cljrs-reader   = { workspace = true }
cljrs-value    = { workspace = true }
cljrs-env      = { workspace = true }
cljrs-builtins = { workspace = true }
cljrs-interp   = { workspace = true }