[package]
name = "cljrs-export-macro"
version = "0.1.135"
edition = "2024"
description = "Proc-macro: #[export] for automatic registration of Rust functions as Clojurust native functions"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn         = { version = "2", features = ["full"] }
quote       = "1"
proc-macro2 = "1"
