[package]
name = "cljrs-gc"
version = "0.1.99"
edition = "2024"
description = "Tracing garbage collector for clojurust"
license.workspace = true
repository.workspace = true

[features]
# Replace GC machinery with region-based allocation (no pauses, no Trace overhead).
no-gc = []

[dependencies]
num-bigint   = { workspace = true }
bigdecimal   = { workspace = true }
num-rational = { workspace = true }
regex        = { workspace = true }
cljrs-logging = { workspace = true }

# Not available on wasm32-unknown-unknown (pulls in errno).  The wasm build
# uses a fixed 64 MB heap limit instead.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
system-memory = "0.1.7"
