[package]
name = "cljrs-interop"
version = "0.1.0"
edition = "2024"
description = "Rust<->Clojure FFI, type marshalling, and NativeObject support"
license.workspace = true
repository.workspace = true

[dependencies]
cljrs-types = { workspace = true }
cljrs-gc    = { workspace = true }
cljrs-value = { workspace = true }
num-bigint  = { workspace = true }
