[package]
name = "cljrs-interp"
version = "0.1.0"
edition = "2024"
description = "Tree-walking interpreter for clojurust (special forms, macros, destructuring)"
license.workspace = true
repository.workspace = true

[features]
no-gc = ["cljrs-gc/no-gc", "cljrs-env/no-gc", "cljrs-value/no-gc", "cljrs-builtins/no-gc"]

[dependencies]
cljrs-env = { workspace = true }
cljrs-types = { workspace = true }
cljrs-builtins = { workspace = true }
cljrs-value = { workspace = true }
cljrs-gc = { workspace = true }
cljrs-reader = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }