[package]
name = "cljrs-io"
version = "0.1.119"
edition = "2024"
description = "Asynchronous file I/O for clojurust — tokio-backed reads/writes delivered over core.async channels"
license.workspace = true
repository.workspace = true

[dependencies]
cljrs-types    = { workspace = true }
cljrs-gc       = { workspace = true }
cljrs-value    = { workspace = true }
cljrs-env      = { workspace = true }
cljrs-reader   = { workspace = true }
cljrs-interp   = { workspace = true }
cljrs-async    = { workspace = true }
tokio          = { workspace = true, features = ["fs", "io-util"] }
encoding_rs    = { workspace = true }
