[package]
name = "cljrs-ir"
version = "0.1.0"
edition = "2024"
description = "Intermediate representation types for clojurust compiler and interpreter"
license.workspace = true
repository.workspace = true

[dependencies]
cljrs-types = { workspace = true }
serde = { workspace = true, features = ["rc"] }
postcard = { workspace = true, features = ["alloc"] }

[dev-dependencies]
cljrs-eval     = { workspace = true }
cljrs-stdlib   = { workspace = true }
cljrs-reader   = { workspace = true }
cljrs-value    = { workspace = true }
cljrs-gc       = { workspace = true }
cljrs-env      = { workspace = true }
