[package]
name = "cljrs-net"
version = "0.1.138"
edition = "2024"
description = "TCP/Unix/TLS networking for clojurust — channel-oriented sockets over core.async"
license.workspace = true
repository.workspace = true

[dependencies]
cljrs-types    = { workspace = true }
cljrs-gc       = { workspace = true }
cljrs-value    = { workspace = true }
cljrs-env      = { workspace = true }
cljrs-reader   = { workspace = true }
cljrs-interp   = { workspace = true }
cljrs-async    = { workspace = true }
tokio          = { workspace = true, features = ["net", "io-util", "sync"] }
tokio-rustls   = { version = "0.26", default-features = false, features = ["ring"] }
rustls         = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
webpki-roots   = "0.26"
rustls-native-certs = "0.8"

[dev-dependencies]
cljrs-stdlib   = { workspace = true }
cljrs-interp   = { workspace = true }
cljrs-reader   = { workspace = true }
cljrs-env      = { workspace = true }
tokio          = { workspace = true, features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "test-util"] }
rcgen          = "0.13"
