[package]
name = "cljrs-runtime"
version = "0.1.0"
edition = "2024"
description = "Core standard library (clojure.core equivalent) for clojurust"
license.workspace = true
repository.workspace = true

[features]
no-gc = ["cljrs-gc/no-gc"]

[dependencies]
cljrs-types = { workspace = true }
cljrs-gc    = { workspace = true }
cljrs-eval  = { workspace = true }
