[package]
name = "cljrs-stdlib"
version = "0.1.155"
edition = "2024"
description = "Built-in standard library namespaces for clojurust (clojure.string, clojure.set, clojure.test, …)"
license.workspace = true
repository.workspace = true

[features]
default = []
no-gc = ["cljrs-gc/no-gc", "cljrs-value/no-gc", "cljrs-eval/no-gc", "cljrs-interp/no-gc", "cljrs-builtins/no-gc"]

[dependencies]
cljrs-builtins = { workspace = true }
cljrs-logging  = { workspace = true }
cljrs-gc       = { workspace = true }
cljrs-ir       = { workspace = true }
cljrs-value    = { workspace = true }
cljrs-eval     = { workspace = true }
cljrs-reader   = { workspace = true }
cljrs-interp   = { workspace = true }
lazy_static = "1.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync", "rt-multi-thread"] }

[dev-dependencies]
cljrs-env = { workspace = true }

