[package]
name = "cljrs-types"
version = "0.1.112"
edition = "2024"
description = "Core types, source spans, and diagnostics for clojurust"
license.workspace = true
repository.workspace = true

[dependencies]
miette    = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
