[package]
name = "cljrs-value"
version = "0.1.0"
edition = "2024"
description = "Runtime Value type and persistent collections for clojurust"

[dependencies]
cljrs-types   = { workspace = true }
cljrs-gc      = { workspace = true }
cljrs-reader  = { workspace = true }
num-bigint   = { workspace = true }
num-rational = { workspace = true }
num-traits   = { workspace = true }
bigdecimal   = { workspace = true }
thiserror    = { workspace = true }
rpds         = { workspace = true }
uuid         = { workspace = true }
regex        = { workspace = true }