[package]
name = "cljrs-vcs"
version = "0.1.149"
edition = "2024"
description = "Git subprocess helpers for versioned symbol resolution"
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
gix       = { workspace = true }
pgp       = { workspace = true }
ssh-key   = { workspace = true }

[dev-dependencies]
tempfile = "3"
